--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                     <!-- end player item template -->
 
                 </div>
+                <div class="logout ui left floated secondary button inverted">
+					<i class="left chevron icon"></i>Log Out
+				</div>
             </div>
             <div class="four wide column">
                 <div class="search ui small icon input ">
