Updated the logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <div class="ui one column center aligned page grid">
     <div class="column twelve wide">
-        <img src="images/logo.png" alt="logo">
+        <img src="images/logo.svg" alt="logo">
     </div>
 </div>
 <div class="main container">
